<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <!--region Горизонтальная разметка (Guideline) -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/guideline_header_percent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_homework"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/guideline_homework_percent" />
    <!--endregion-->

    <!--region Заголовок (Header) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_container"
        android:layout_width="@dimen/zero_dimen"
        android:layout_height="@dimen/zero_dimen"
        android:layout_marginStart="@dimen/header_container_margin_start"
        android:layout_marginEnd="@dimen/header_container_margin_end"
        app:layout_constraintBottom_toBottomOf="@id/guideline_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/header_classes_title"
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/header_classes_title_margin_end"
            android:maxLines="2"
            android:text="@string/header_classes_title_text"
            android:textColor="@color/white"
            android:textSize="@dimen/header_classes_title_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/header_search_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/header_classes_today_details"
            android:layout_width="@dimen/zero_dimen"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/header_classes_today_details_margin_end"
            android:maxLines="2"
            android:text="@string/header_classes_today_details_text"
            android:textColor="@color/gray"
            android:textSize="@dimen/header_classes_today_details_text_size"
            app:layout_constraintTop_toBottomOf="@id/header_classes_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/header_search_button" />

        <ImageView
            android:id="@+id/header_search_button"
            android:layout_width="@dimen/header_search_button_width"
            android:layout_height="@dimen/header_search_button_height"
            android:layout_marginEnd="@dimen/header_search_button_margin_end"
            android:src="@drawable/ic_baseline_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/header_list_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/header_list_button"
            android:layout_width="@dimen/header_list_button_width"
            android:layout_height="@dimen/header_list_button_height"
            android:layout_marginEnd="@dimen/header_list_button_margin_end"
            android:src="@drawable/ic_list_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/header_details_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/header_details_button"
            android:layout_width="@dimen/header_details_button_width"
            android:layout_height="@dimen/header_details_button_height"
            android:src="@drawable/ic_four_circles"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--endregion-->

    <!--region Список занятий -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/classes_recycler_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dimen"
        android:layout_marginStart="@dimen/classes_recycler_list_margin_start"
        android:layout_marginEnd="@dimen/classes_recycler_list_margin_end"
        app:layout_constraintTop_toBottomOf="@id/header_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/footer_classes_container"/>
    <!--endregion-->

    <!--region Footer -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer_classes_container"
        android:layout_width="@dimen/zero_dimen"
        android:layout_height="@dimen/zero_dimen"
        style="@style/DarkGrayStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_homework">

        <ImageView
            android:id="@+id/footer_home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dice_four_white"
            android:layout_marginStart="@dimen/footer_home_button_margin_start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/footer_classes_container_button"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/footer_classes_container_button"
            android:layout_width="@dimen/footer_home_container_width"
            android:layout_height="@dimen/footer_home_container_height"
            style="@style/DarkGreenStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/footer_home_button"
            app:layout_constraintEnd_toStartOf="@id/footer_list_button"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/footer_classes_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_edit_calendar"
                android:layout_marginStart="@dimen/footer_classes_image_margin_start"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:id="@+id/footer_classes_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/footer_classes_description_text"
                android:textColor="@color/green"
                android:layout_marginStart="@dimen/footer_classes_description_margin_start"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/footer_classes_image"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/footer_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_list"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/footer_classes_container_button"
            app:layout_constraintEnd_toStartOf="@id/footer_star_button"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/footer_star_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/footer_list_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!--endregion-->
</androidx.constraintlayout.widget.ConstraintLayout>